--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>THU-SYU-WebDev/docs</title>
-    <link rel="shortcut icon" href="image/GitHub-Mark-120px-plus.png" type="image/x-icon">
+    <link rel="shortcut icon" href="GitHub-Mark-120px-plus.png" type="image/x-icon">
     <link rel="stylesheet" href="list.css" type="text/css">
     <link rel="stylesheet" href="content.css" type="text/css">
 </head>
